# ai-mcp

./: .env.setup  Hybrid-RAG-Dharm  Nikhil_Insurance claim  README.md  Twitter Thread for Auto Insurance Claim Processing Workflow.docx  UI_Integrate.py  app.py  guideline_rec_workflow.html  llamacloud_sql_router.py  main.py  patient_case_summary.ipynb  requirements.txt  streamlit_app.py  task 2 requirement.txt  task2 README.md  uimaking.py  workflow.py  workflow_display.py
AgenticRAG_TextToSQL/: Readme.md  TextToSql_Ui.py  agent.py  config.py  database.py  query_engines.py  query_processor.py  requirements.txt  tools.py
AutoInsurance-Agent/: README.md  insuranceApp.py  requirements.txt
Vamshi_ClaimSonic_Auto_Insurance_Claims_Agent/: .gitignore  README.md  main.py  pyproject.toml
Vamshi_ClaimSonic_Auto_Insurance_Claims_Agent/Prompts/: Policy_Queries.md  Policy_Recommendation.md
Vamshi_ClaimSonic_Auto_Insurance_Claims_Agent/notebooks/: auto_insurance_claims.ipynb
patient-case-summary/: .env_example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
patient-case-summary/.streamlit/: config.toml
patient-case-summary/assets/: workflow_diagram.txt
patient-case-summary/data/: README.md
patient-case-summary/data_out/: README.md
patient-case-summary/data_out/workflow_output/: condition_bundles.json  guideline_recommendations.jsonl
patient-case-summary/workflow/: case_summary.py  guideline_retrieval.py  workflow.py
patient-case-summary/workflow_code/: __init__.py  condition_mapping.py  data_extraction.py  data_models.py  workflow.py
(+328 files in other folders)
